# instant

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  retrieve_data.sh
.travis/: install_mkldnn.sh  install_protoc.sh  run_cmake.sh
cmake/: gtest.cmake  mkldnn.cmake  onnx.cmake
data/: average_pool_2_2_0.txt  average_pool_3_2_0.txt  input_3_5_64_64.txt  max_pool_2_2_0.txt  max_pool_3_2_0.txt
example/: CMakeLists.txt  vgg16_example.cpp  vgg18_example.cpp
instant/: CMakeLists.txt  array.hpp  context.hpp  dtype.hpp  engine.hpp  graph.hpp  instant.hpp  load_onnx.hpp  model.hpp  onnx.hpp  op_type.hpp  operator.hpp  utility.hpp
instant/mkldnn/: model.hpp  operator.hpp  utility.hpp
instant/mkldnn/operator/: common.hpp  conv.hpp  dropout.hpp  eltwise.hpp  fc.hpp  pool.hpp  softmax.hpp
instant/operator/: batch_norm.hpp  common.hpp  conv.hpp  eltwise.hpp  fc.hpp  nop.hpp  pool.hpp  reshape.hpp  softmax.hpp
test/: CMakeLists.txt  common.hpp  context.cpp  graph.cpp  mkldnn.cpp  np_io.cpp  np_io.hpp  onnx.cpp  operator.cpp  test_test.cpp
tool/: CMakeLists.txt  onnx_viewer.cpp
