find_package(OpenCV)
if (NOT OpenCV_FOUND)
	message(FATAL_ERROR "OpenCV not found. OpenCV is needed to build example.")
endif()
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(vgg16_example vgg16_example.cpp)
target_link_libraries(vgg16_example mkldnn onnx_proto ${PROTOBUF_LIBRARY} ${OpenCV_LIBS})
